[package]
name = "bevy-ios-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git ="https://github.com/ManevilleF/bevy", branch = "feat/bevy_ui_touch_input", vorbis = false }

[lib]
name = "bevy_ios_example"
crate-type = ["staticlib"] 