[package]
name = "PinballWebsite"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "*"
serde = { version = "1.0.123", features = ["derive"] }
rocket = "0.4.2"
rocket_codegen = "0.4.2"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]